# scale-encode

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
scale-encode/: Cargo.toml
scale-encode-derive/: Cargo.toml
scale-encode-derive/src/: lib.rs  utils.rs
scale-encode/src/: lib.rs
scale-encode/src/error/: context.rs  mod.rs
scale-encode/src/impls/: bits.rs  composite.rs  mod.rs  primitive_types.rs  variant.rs
