[package]
name = "scale-encode"
documentation = "https://docs.rs/scale-encode"
description = "Encode types to SCALE bytes given a desired target type"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
include.workspace = true

[features]
default = ["std", "derive", "primitive-types", "bits"]

# Activates std feature.
std = []

# Include the derive proc macro.
derive = ["dep:scale-encode-derive"]

# impls for key primitive-types.
primitive-types = ["dep:primitive-types"]

# impls for Bits.
bits = ["dep:scale-bits"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-type-resolver = { version = "0.2.0", default-features = false, features = ["visitor"] }
scale-bits = { version = "0.6.0", default-features = false, optional = true }
scale-encode-derive = { workspace = true, optional = true }
primitive-types = { version = "0.13.1", optional = true, default-features = false }
smallvec = "1.10.0"
derive_more = { version = "1.0.0", default-features = false, features = ["from", "display"] }

[dev-dependencies]
bitvec = { version = "1.0.1", default-features = false }
scale-info = { version = "2.3.0", features = ["bit-vec", "derive", "std"], default-features = false }
scale-encode-derive = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "bit-vec"] }
trybuild = "1.0.72"
# enable scale-info feature for testing:
primitive-types = { version = "0.13.1", default-features = false, features = ["scale-info"] }
scale-type-resolver = { version = "0.2.0", default-features = false, features = ["scale-info"] }
